essay-genius-backend/k8s/manifest/application/eg-essay-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eg-essay-service
  namespace: essay-genius
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eg-essay-service
  template:
    metadata:
      labels:
        app: eg-essay-service
    spec:
      containers:
        - name: eg-essay
          image: eg-essay-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10002
---
apiVersion: v1
kind: Service
metadata:
  name: eg-essay-service
  namespace: essay-genius
spec:
  type: ClusterIP
  selector:
    app: eg-essay-service
  ports:
    - name: http
      protocol: TCP
      port: 10002
      targetPort: 10002

    - name: grpc
      protocol: TCP
      port: 9082
      targetPort: 9082
