essay-genius-backend/k8s/manifest/application/eg-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eg-frontend
  namespace: essay-genius
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eg-frontend
  template:
    metadata:
      labels:
        app: eg-frontend
    spec:
      containers:
        - name: eg-frontend
          image: eg-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: eg-frontend
  namespace: essay-genius
spec:
  type: ClusterIP
  selector:
    app: eg-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 80
