essay-genius-backend/k8s/manifest/application/eg-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eg-gateway
  namespace: essay-genius
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eg-gateway
  template:
    metadata:
      labels:
        app: eg-gateway
    spec:
      containers:
        - name: eg-gateway
          image: eg-gateway:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9050
---
apiVersion: v1
kind: Service
metadata:
  name: eg-gateway
  namespace: essay-genius
spec:
  type: ClusterIP
  selector:
    app: eg-gateway
  ports:
    - protocol: TCP
      port: 9050
      targetPort: 9050
