essay-genius-backend/k8s/manifest/application/eg-identity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eg-identity-service
  namespace: essay-genius
  labels:
    app: eg-identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eg-identity-service
  template:
    metadata:
      labels:
        app: eg-identity-service
    spec:
      serviceAccountName: eg-identity-sa
      volumes:
        - name: shared-config
          emptyDir: {}
        - name: init-config
          configMap:
            name: eg-identity-init-config
      containers:
        - name: eg-identity
          image: eg-identity-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
          volumeMounts:
            - name: shared-config
              mountPath: /app/src/main/resources
---
apiVersion: v1
kind: Service
metadata:
  name: eg-identity-service
  namespace: essay-genius
spec:
  type: ClusterIP
  selector:
    app: eg-identity-service
  ports:
    - name: http
      protocol: TCP
      port: 10000
      targetPort: 10000
    - name: grpc
      protocol: TCP
      port: 9083
      targetPort: 9083
