essay-genius-backend/k8s/manifest/application/eg-interaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eg-interaction-service
  namespace: essay-genius
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eg-interaction-service
  template:
    metadata:
      labels:
        app: eg-interaction-service
    spec:
      containers:
        - name: eg-interaction
          image: eg-interaction-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10003
---
apiVersion: v1
kind: Service
metadata:
  name: eg-interaction-service
  namespace: essay-genius
spec:
  type: ClusterIP
  selector:
    app: eg-interaction-service
  ports:
    - name: http
      protocol: TCP
      port: 10003
      targetPort: 10003
    - name: grpc
      protocol: TCP
      port: 9084
      targetPort: 9084
